--- a/notes/index.htm
+++ b/notes/index.htm
@@ -32,7 +32,15 @@
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.6.4 — static microblog processor-->
+<noscript>
+	<blockquote>
+		<p><strong>NOTE</strong><br/>
+		<em>You have JavaScript disabled, certain multimedia elements will not work as expected.<br/>
+		Consider whitelisting this site, I don't use analytics and my scripts are
+		<a href="/static/script.js">free and libre software</a>.</em></p>
+	</blockquote>
+</noscript>
+<!--kagami v0.6.5 — static microblog processor-->
 <h1>Notes<span id="Notes"></span></h1>
 <p>Writings and notes on random topics, sorted by date first posted.</p>
 <div class="index">
@@ -53,7 +61,7 @@
 	</span>
 	<p>written materials <a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>, source code <a href="https://www.gnu.org/licenses/gpl-3.0">GNU GPLv3+</a>
 	— &#169; 2015-2022 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br/>
-	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.4 — static microblog processor</a></p>
+	Powered by <a href="https://github.com/microsounds/kagami">kagami v0.6.5 — static microblog processor</a></p>
 </div>
 </div> <!-- end of content -->
 </body>
