[microsounds@effe] 6 changes 2022/3/13 9:59pm PDT

--- a/index.htm
+++ b/index.htm
@@ -32,16 +32,11 @@
 	</div>
 </div>
 <div class="content">
-<noscript>
-	<blockquote>
-		<p><strong>NOTE</strong><br/>
-		<em>You have JavaScript disabled, certain multimedia elements will not work as expected.<br/>
-		Consider whitelisting this site, I don't use analytics and my scripts are
-		<a href="/static/script.js">free and libre software</a>.</em></p>
-	</blockquote>
-</noscript>
 <!--kagami v0.6.5 — static microblog processor-->
 <h1>Homepage<span id="Homepage"></span></h1>
+<noscript>
+	<em>You have JavaScript disabled, certain multimedia elements will not work as expected.</em>
+</noscript>
 <!-- original: https://gelbooru.com/index.php?page=post&s=view&id=3757995 -->
 <p><img src="/static/starry.jpg" alt="heading" /></p>
 <h2>About me<span id="About-me"></span></h2>
